<resources>
    <string name="app_name">UpWay</string>
    <string name="title_activity_new_invoice">NewInvoice</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="city">Artur Nogueira</string>
    <string name="ltimos_pedidos">Últimos Pedidos</string>
    <string name="ver_todos">Ver todos</string>
    <string name="nenhum_pedido">Nenhum pedido</string>
    <string name="novo_pedido">Novo Pedido</string>
</resources>